# rdma-core-mummy

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  codelint.yml  commitlint.yml
examples/: CMakeLists.txt  hello_ibverbs.c
examples/ibverbs/: CMakeLists.txt  asyncwatch.c  device_list.c  devinfo.c  rc_pingpong.c  srq_pingpong.c  ud_pingpong.c  xsrq_pingpong.c
examples/rdmacm/: CMakeLists.txt  cmtime.c  common.c  common.h
include/infiniband/: driver.h  ib_user_ioctl_verbs.h  sa.h  umad.h  verbs.h
include/rdma/: ib_user_verbs.h
src/: ibumad.c  ibverbs.c  rdmacm.c  umad.c  utility.h
